# AutonomousFlight

./: .gitignore  README.md
scripts/: launch_all.sh  start_gazebo.sh  start_project.sh  start_uorb_client.sh  stop_all.sh
src/custom_offboard_control/: CMakeLists.txt  package.xml
src/custom_offboard_control/launch/: offboard_control.launch.py
src/custom_offboard_control/src/: offboard_control.cpp
